tests/ui/consts/min_const_fn/bad_const_fn_body_ice.stderr
error[E0010]: allocations are not allowed in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^ allocation not allowed in constant functions
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `slice::<impl [T]>::into_vec` is not yet stable as a const fn
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(const_convert_methods)]` to the crate attributes to enable
   |
LL + #![feature(const_convert_methods)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0010`.
